Added support of more statuses.

--- a/resources.qrc
+++ b/resources.qrc
@@ -6,6 +6,8 @@
         <file>resources/mode.png</file>
         <file alias="success">resources/checked.png</file>
         <file alias="failure">resources/cancel.png</file>
-        <file alias="working">resources/loading.png</file>
+        <file alias="running">resources/loading.png</file>
+        <file alias="pending">resources/add.png</file>
+        <file alias="skipped">resources/delete.png</file>
     </qresource>
 </RCC>
